LIMA-95 : Fix cropped icon for tennis in ls-icons font

--- a/compiled/js/lsicons/style.css
+++ b/compiled/js/lsicons/style.css
@@ -1,10 +1,10 @@
 @font-face {
 	font-family: 'LSicons';
-	src:url('fonts/LSicons.eot?jc3a83');
-	src:url('fonts/LSicons.eot?#iefixjc3a83') format('embedded-opentype'),
-		url('fonts/LSicons.woff?jc3a83') format('woff'),
-		url('fonts/LSicons.ttf?jc3a83') format('truetype'),
-		url('fonts/LSicons.svg?jc3a83#LSicons') format('svg');
+	src:url('fonts/LSicons.eot?-fsye1f');
+	src:url('fonts/LSicons.eot?#iefix-fsye1f') format('embedded-opentype'),
+		url('fonts/LSicons.woff?-fsye1f') format('woff'),
+		url('fonts/LSicons.ttf?-fsye1f') format('truetype'),
+		url('fonts/LSicons.svg?-fsye1f#LSicons') format('svg');
 	font-weight: normal;
 	font-style: normal;
 }
